@@ -1,3 +1,9 @@
+2022-05-01  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode.el (ebuild-repo-mode, find-file-hook): Use ' rather
+	than #' for quoting of function names.
+	* glep-mode.el (glep-mode): Ditto.
+
 2022-04-30  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.57 released.
